ligolang/src/test/contracts/negative/parametric_types5.religo
type foo('a,'a) = ('a , 'a);